--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ Binaries
 DerivedDataCache
 Intermediate
 Saved
+RawContent
+/Content/StackOBot/Environment/Rocks/SM_RockFlats_01.uasset
+/Content/StackOBot/Environment/Rocks/SM_RockFlats_02.uasset
 .vscode
 .vs
 *.VC.db
