--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Saved
 RawContent
 /Content/StackOBot/Environment/Rocks/SM_RockFlats_01.uasset
 /Content/StackOBot/Environment/Rocks/SM_RockFlats_02.uasset
+Builds
 .vscode
 .vs
 *.VC.db
