--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StackOBot/UI/MainMenu/MainMenu.MainMenu
+GameDefaultMap=/Game/StackOBot/Maps/MainWorld.MainWorld
 GameInstanceClass=/Game/StackOBot/Blueprints/Framework/GI_StackOBot.GI_StackOBot_C
 EditorStartupMap=/Game/StackOBot/Maps/MainWorld.MainWorld
 GlobalDefaultGameMode=/Game/StackOBot/Blueprints/Framework/GM_InGame.GM_InGame_C
